# mldp-pvxs-driver

./: .clangd  .editorconfig  .gitignore  .nwa-config.yaml  CMakeLists.txt  CONTRIBUTING.md  GitVersion.yml  METRICS_EXPORT_GUIDE.md  README.md  cliff.toml  config.yaml  docker-compose-test.yml  docker-compose.yml  doecode.yml
.claude/: settings.local.json
.devcontainer/: Dockerfile  Dockerfile.artifacts  build-docker-image.yaml  devcontainer.json  docker-compose.devcontainer.yml
.github/workflows/: build-and-test.yml  build-artifact-image.yml  build-docker-image.yml  delete-docker-images.yml
data/: signals.cu-hxr.prod
doc/: readers.md
docs/: architecture.md  configuration.md  controller.md  developer.md  http-provider.md  logging.md  metrics-export-guide.md  metrics-extension-guide.md  query-client.md  readers-implementation.md  readers.md  writers-implementation.md
docs/doc/: readers-implementation.md
docs/plan/: reader-writer-routing.md
docs/readers/: epics-archiver-reader-implementation.md  epics-archiver-reader.md  epics-base-reader-implementation.md  epics-base-reader.md  epics-pvxs-reader-implementation.md  epics-pvxs-reader.md  slac-bsas-table-gen1.md  slac-bsas-table-gen2.md
docs/todo/: 01_queryable-abstraction.md  02_hdf5-writer-tests.md  04_writer-reader-infrastructure-docs(done).md  05_configuration-docs-update.md  06_controller-epics-hdf5-integration-tests.md  factory-base-class-unification.md  merge-root-sources-single-writer.md  multi-endpoint-output-plan.md  per-writer-metrics.md  reader-writer-routing.md  routing-pv-filter.md
docs/writers/: grpc-writer.md  hdf5-writer.md  mldp-writer.md
include/: PeriodicMetricsDumper.h  SpdlogLogger.h  mldp_pvxs_driver.h  pvxs_mldp_driver.h  version.h
include/bus/: IEventBusPush.h
include/cli/: ConfigPrinter.h
include/config/: Config.h  ReaderConfig.h
include/controller/: MLDPPVXSController.h  MLDPPVXSControllerConfig.h  RouteTable.h
include/metrics/: ExtendedMetrics.h  Metrics.h  MetricsConfig.h  MetricsSnapshot.h  WriterMetrics.h
include/metrics/procmon/: MetricsCollector.hpp  MetricsHandler.hpp  MetricsSnapshot.hpp  ProcMon.hpp  ProcReader.hpp  Result.hpp
include/pool/: IObjectPool.h  IPoolHandle.h  MLDPGrpcPool.h  MLDPGrpcPoolConfig.h  MLDPGrpcQueryPool.h
include/query/: IQueryable.h  MLDPQueryClient.h
include/query/impl/mldp/: MLDPQueryClient.h
include/reader/: Reader.h  ReaderFactory.h
include/reader/impl/epics/: BSASEpicsMLDPConversion.h  EpicsBaseMonitorPoller.h  EpicsBaseReader.h  EpicsMLDPConversion.h  EpicsPVDataConversion.h  EpicsPVXSReader.h  EpicsReader.h  EpicsReaderBase.h  EpicsReaderConfig.h
include/reader/impl/epics_archiver/: ArchiverPbHttpConversion.h  EpicsArchiverReader.h  EpicsArchiverReaderConfig.h
include/util/: StringFormat.h
include/util/bus/: DataBatch.h  IDataBus.h  IEventBusPush.h
include/util/factory/: Factory.h
include/util/http/: CurlHttpClient.h  HttpClient.h  HttpUrlUtils.h
include/util/log/: CoutLogger.h  ILog.h  Logger.h
include/util/pool/: IPoolHandle.h  MLDPGrpcPool.h  MLDPGrpcPoolConfig.h
include/util/time/: DateTimeUtils.h
include/writer/: IWriter.h  WriterConfig.h  WriterFactory.h
include/writer/grpc/: MLDPGrpcWriter.h  MLDPGrpcWriterConfig.h
include/writer/hdf5/: HDF5FilePool.h  HDF5Writer.h  HDF5WriterConfig.h  HDF5WriterMetrics.h
include/writer/mldp/: MLDPWriter.h  MLDPWriterConfig.h
scripts/: add-licenses-include-h.sh  build_appimage.sh  generate-hdf5-config.sh  ghcr-delete-image.sh
src/: PeriodicMetricsDumper.cpp  PeriodicMetricsDumper.h  SpdlogLogger.cpp  mldp_pvxs_driver.cpp  mldp_pvxs_driver_main.cpp  pvxs_mldp_driver.cpp  pvxs_mldp_driver_main.cpp  version.h.in
src/cli/: ConfigPrinter.cpp  PeriodicMetricsDumper.cpp  mldp_pvxs_driver_main.cpp
src/config/: Config.cpp  ReaderConfig.cpp
src/controller/: MLDPPVXSController.cpp  MLDPPVXSControllerConfig.cpp  RouteTable.cpp
src/metrics/: Metrics.cpp  MetricsConfig.cpp  MetricsSnapshot.cpp
src/metrics/procmon/: MetricsCollector.cpp  ProcReader.cpp
src/pool/: MLDPGrpcIngestionPool.cpp  MLDPGrpcPool.cpp  MLDPGrpcPoolConfig.cpp  MLDPGrpcQueryPool.cpp
src/query/: MLDPQueryClient.cpp
src/reader/: ReaderFactory.cpp
src/util/http/: CurlHttpClient.cpp  HttpUrlUtils.cpp
src/util/log/: CoutLogger.cpp
src/util/pool/: MLDPGrpcPool.cpp  MLDPGrpcPoolConfig.cpp
src/util/time/: DateTimeUtils.cpp
src/writer/: WriterConfig.cpp  WriterFactory.cpp
src/writer/grpc/: MLDPGrpcWriter.cpp  MLDPGrpcWriterConfig.cpp
src/writer/hdf5/: HDF5FilePool.cpp  HDF5Writer.cpp  HDF5WriterConfig.cpp  HDF5WriterMetrics.cpp
src/writer/mldp/: MLDPWriter.cpp  MLDPWriterConfig.cpp
test/: driver.cpp  ryml_single_header_translation_unit.cpp
test/cli/: config_printer_test.cpp
test/common/: MldpMetricsTestUtils.h  MldpQueryTestUtils.h
test/config/: epics_reader_config_test.cpp  mldppvxs_controller_config_test.cpp  reader_config_test.cpp  test_config_helpers.h  test_epics_reader_config_helpers.h  test_reader_config_helpers.h
test/controller/: mldppvxs_controller_epics_archiver_periodic_tail_integration_test.cpp  mldppvxs_controller_hdf5_integration_test.cpp  mldppvxs_controller_mldp_writer_integration_test.cpp  mldppvxs_controller_test.cpp  route_table_config_test.cpp  route_table_test.cpp
test/metrics/: metrics_histogram_test.cpp  periodic_metrics_dumper_test.cpp  system_metrics_test.cpp
test/mock/: EpicsArchiverTestUtils.h  Gen1NTablePV.cpp  Gen1NTablePV.h  MockArchiverPbHttpServer.cpp  MockArchiverPbHttpServer.h  MockDataBus.h  dp.cpp  dp.h  sioc.cpp  sioc.h  sioc_main.cpp
test/pool/: mldp_grpc_pool_test.cpp  mldp_grpc_writer_integration_test.cpp  test_mldp_grpc_pool.cpp
test/util/factory/: factory_test.cpp
test/util/http/: curl_http_client_test.cpp
test/util/pool/: test_mldp_grpc_pool.cpp
test/writer/grpc/: mldp_grpc_writer_integration_test.cpp
test/writer/hdf5/: hdf5_file_pool_test.cpp  hdf5_writer_config_test.cpp  hdf5_writer_metrics_test.cpp  hdf5_writer_test.cpp
test/writer/mldp/: mldp_writer_integration_test.cpp
tools/: hdf5_dump.cpp
(+41 files in other folders)
